Fix project name overflow

--- a/src/style.css
+++ b/src/style.css
@@ -155,6 +155,9 @@ h1 {
     font-size: 18pt;
     text-align: justify;
     width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .articles {
